# rass

./: .gitignore  Makefile  README.md  compile_commands.json  sdl2-config
.cache/clangd/index/: assets.cpp.590C8DE9AE0F213A.idx  assets.hpp.C0AE2423CCA48A98.idx  enemy.cpp.867BD57588875E6C.idx  enemy.hpp.CD6A7B5454255550.idx  gameObject.hpp.66D3E886F6936BBD.idx  helpers.hpp.5E1934C281AA7983.idx  keyboard.cpp.273DFF190CED0E67.idx  keyboard.hpp.2BA1389CE813492D.idx  main.cpp.C68E72C8FFDBEF40.idx  objects.hpp.EB2C6CB9634B26BF.idx  player.cpp.F122741F8458CD85.idx  player.hpp.21541B269C5CAB54.idx  rass.hpp.7A426000567C2979.idx  texManager.cpp.89CF8EC143040D59.idx  texManager.hpp.315CDC4FDFC543CD.idx  update.cpp.58EBF33BE44F6965.idx
assets/levels/: 0
src/: CMakeLists.txt  main.cpp
src/helpers/: assets.cpp  helpers.hpp  level.cpp  texManager.cpp  texManager.hpp
src/include/: enemy.hpp  gameVector.hpp  objects.hpp  player.hpp
src/include/helpers/: assets.hpp  helpers.hpp  level.hpp  objectIds.hpp  texManager.hpp
src/include/objects/: AABB.hpp  agile.hpp  coin.hpp  enemy.hpp  objects.hpp  player.hpp  shape.hpp  terrain.hpp
src/include/physics/: vector.hpp
src/objects/: AABB.cpp  agile.cpp  coin.cpp  enemy.cpp  objects.hpp  player.cpp  shape.cpp
src/objects/enemy/: enemy.cpp  enemy.hpp
src/objects/player/: player.cpp  player.hpp
src/physics/: vector.cpp
src/rass/: CMakeLists.txt  LICENSE.txt  README.md  gameObject.cpp  gameObject.hpp  handleEvents.cpp  rass.cpp  rass.hpp  rass_gameObject.cpp  rass_gameObject.hpp  rass_keyboard.cpp  rass_keyboard.hpp  rass_texManager.cpp  rass_texManager.hpp  rass_vector.cpp  rass_vector.hpp  update.cpp
src/rass/core/: core.hpp  gameObject.cpp  gameObject.hpp  handleEvents.cpp  rass.cpp  update.cpp
src/rass/helpers/: helpers.hpp  keyboard.cpp  keyboard.hpp  texManager.hpp
src/rass/include/: gameObject.hpp  rass.hpp
